# gameoflife

./: CMakeLists.txt  main.cpp
gamelogic/: CMakeLists.txt  gamelogic.cpp
gamelogic/include/gamelogic/: gamelogic.hpp
statemachine/: CMakeLists.txt  statemachine.cpp
statemachine/include/statemachine/: statemachine.hpp
stringutils/: CMakeLists.txt  stringutils.cpp
stringutils/include/stringutils/: stringutils.hpp
ui/: CMakeLists.txt  ui.cpp
ui/include/ui/: ui.hpp
